fix: missing spacing in table data state component (#115)

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -128,6 +128,8 @@
 }
 
 .Layer__table-state-container {
+  padding: var(--spacing-2xl) var(--spacing-sm);
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
